kubernetes/overlays/infrastructure/infra/config/external-services/frigate.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-service-frigate
  labels:
    kubernetes.io/service-name: external-service-frigate
addressType: IPv4
ports:
  - port: 8971
    name: https
    protocol: TCP
  - port: 8554
    name: rtsp
    protocol: TCP
endpoints:
  - addresses:
    - "REDACTED_IP"
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-frigate
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: default-insecure-tls@kubernetescrd
spec:
  ports:
    - port: 8971
      protocol: TCP
      targetPort: 8971
      name: https
    - port: 8554
      protocol: TCP
      targetPort: 8554
      name: rtsp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-frigate
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: cctv.0b.au
      http:
        paths:
        - backend:
            service:
              name: external-service-frigate
              port:
                number: 8971
          path: /
          pathType: ImplementationSpecific
