kubernetes/overlays/infrastructure/infra/config/external-services/home-assistant.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-service-home-assistant
  labels:
    kubernetes.io/service-name: external-service-home-assistant
addressType: IPv4
ports:
  - port: 8123
    name: http
    protocol: TCP
endpoints:
  - addresses:
    - "REDACTED_IP"
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-home-assistant
spec:
  ports:
    - port: 8123
      protocol: TCP
      targetPort: 8123
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-home-assistant
spec:
  ingressClassName: traefik
  rules:
    - host: home.0b.au
      http:
        paths:
        - backend:
            service:
              name: external-service-home-assistant
              port:
                number: 8123
          path: /
          pathType: ImplementationSpecific
