kubernetes/overlays/infrastructure/infra/config/external-services/ollama.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-service-ollama
  labels:
    kubernetes.io/service-name: external-service-ollama
addressType: IPv4
ports:
  - port: 7869
    name: https
    protocol: TCP
endpoints:
  - addresses:
    - "REDACTED_IP"
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: external-service-ollama
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: default-insecure-tls@kubernetescrd
spec:
  ports:
    - port: 7869
      protocol: TCP
      targetPort: 7869
      name: https
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ollama
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ollama.example.com
      http:
        paths:
        - backend:
            service:
              name: external-service-ollama
              port:
                number: 7869
          path: /
          pathType: ImplementationSpecific
